# ml-driver

./: .Module.symvers.cmd  .ml_driver.ko.cmd  .ml_driver.mod.cmd  .ml_driver.mod.o.cmd  .ml_driver.o.cmd  .modules.order.cmd  Makefile  README.md  control  ml_driver.c  ml_driver.ko  ml_driver.mod  ml_driver.mod.c  ml_manage.sh  modules.order  test_w  test_write.c  user-space.c
kernel_module/: Makefile  ml_driver.c
userspace/: CMakeCache.txt  CMakeLists.txt  Makefile  Twrite  Twrite.c  Uspace  cmake_install.cmake  controlHID  controlHID.c
